Development
	Make middle button toggle mute
	Add buttons to toggle loop and shuffle to the playlist window
	Correct problem with tracks loaded from an iPod as not being marked playable
	Updated Japanese translation from Launchpad
	Fix control panel when working in embedded mode
	Added UTF-8 to subtitle and metadata possible encodings
	Updated Spanish, Czech, Galacian, Polish and Russian translations from launchpad
	Added new translations from launchpad da,et,eu,fi,fo
	Add webm mimetypes to nautilus plugin
	Add webm to desktop file, need mplayer svn + libvpx git to make it work.
	Fix some problems where typed in values to languages were not being displayed properly
	Add CP1256 to the langlist
	Allow for separate audio and video plugin cache sizes, plugin will use video cache size
		unless mimetype has "audio" in it, then it will use the audio cache size
	Fix problem with proper audio track being selected, mplayer selects them 0 based but reports
		them one based, so have to make adjustments to the value returned
	Workaround for media files with non-zero start time, requires mplayer SVN r31346 or greater
	Fix menu item position change on popup menu due to previous change
	Move Open on popup menu, below the Play/Pause, Stop, Prev and Next block
	Fix bug #406 - compile error when new GTK and no libasound
	Fix video playback problems when loading a folder from playlist screen
	NULL check on retrieve_metadata_pool clear process
	Check for block devices better in gio mode
	Update the subtitle on the current playlist item, when dragging and dropping.
	Fix minor memory leak in drag and drop for subtitles
	Added .ssa as a subtitle extension to drag and drop
	Support drag and drop of subtitle files with .srt or .ass extension. 
	Make V (show/hide subtitles) work in fullscreen mode
	More work on making code compile with gseal enabled, still more to do
	Add configure flag --enable-gseal and start fixing code