@@ -1302,9 +1302,11 @@ gpointer launch_player(gpointer data)
     argv[arg++] = g_strdup_printf("-nomsgmodule");
 
 
-    if (threaddata->playlist)
+    if (threaddata->playlist) {
+        argv[arg++] = g_strdup_printf("-cache");
+        argv[arg++] = g_strdup_printf("%i", cache_size);
         argv[arg++] = g_strdup_printf("-playlist");
-
+	}
 
     argv[arg] = g_strdup_printf("%s", threaddata->filename);
     argv[arg + 1] = NULL;
